--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@jspsych/plugin-fullscreen": "^1.0.0",
     "@jspsych/plugin-html-keyboard-response": "^1.0.0",
+    "@jspsych/plugin-instructions": "^1.0.0",
     "@jspsych/plugin-preload": "^1.0.0",
     "jspsych": "^7.0.0",
     "numjs": "^0.16.1"
