--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@jspsych/plugin-instructions": "^1.0.0",
     "@jspsych/plugin-preload": "^1.0.0",
     "jspsych": "^7.0.0",
+    "lodash": "^4.17.21",
     "numjs": "^0.16.1"
   },
   "devDependencies": {
