--- a/package.json
+++ b/package.json
@@ -1,23 +1,21 @@
 {
-  "name": "jspsych-cspc-task",
-  "version": "0.0.1",
-  "description": "",
+  "private": true,
   "scripts": {
     "jspsych": "jspsych -e experiment",
-    "start": "npm run jspsych -- run cspc_flanker_task",
-    "build": "npm run jspsych -- build cspc_flanker_task --jatos"
+    "start": "npm run jspsych -- run",
+    "instructions": "npm run jspsych -- build --jatos instructions",
+    "flanker": "npm run jspsych -- build --jatos flanker",
+    "post_quest": "npm run jspsych -- build --jatos post_questionaire"
   },
   "dependencies": {
-    "@jspsych/plugin-fullscreen": "^1.0.0",
+    "@jspsych/plugin-fullscreen": "^1.0.1",
     "@jspsych/plugin-html-keyboard-response": "^1.0.0",
-    "@jspsych/plugin-instructions": "^1.0.0",
+    "@jspsych/plugin-instructions": "^1.1.0",
     "@jspsych/plugin-preload": "^1.0.0",
-    "jspsych": "^7.0.0",
-    "lodash": "^4.17.21",
-    "numjs": "^0.16.1"
+    "jspsych": "^7.0.0"
   },
   "devDependencies": {
-    "jspsych-builder": "^4.0.1"
+    "jspsych-builder": "^4.1.1"
   },
   "browserslist": ">0.25%, not dead"
 }
