--- a/package.json
+++ b/package.json
@@ -12,13 +12,33 @@
     "@jspsych/plugin-fullscreen": "^1.0.0",
     "@jspsych/plugin-html-keyboard-response": "^1.0.0",
     "@jspsych/plugin-instructions": "^1.0.0",
-    "@jspsych/plugin-preload": "^1.0.0",
     "jspsych": "^7.0.0",
     "lodash": "^4.17.21",
     "numjs": "^0.16.1"
   },
+  "browserslist": ">0.25%, not dead",
   "devDependencies": {
-    "jspsych-builder": "^4.0.1"
-  },
-  "browserslist": ">0.25%, not dead"
+    "@babel/core": "^7.17.5",
+    "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-commonjs": "^21.0.2",
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-typescript": "^8.3.1",
+    "gulp": "^4.0.2",
+    "gulp-better-rollup": "^4.0.1",
+    "gulp-clean": "^0.4.0",
+    "gulp-cli": "^2.3.0",
+    "gulp-concat-css": "^3.1.0",
+    "gulp-connect": "^5.7.0",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-file": "^0.4.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-replace": "^1.1.3",
+    "gulp-sass": "^5.1.0",
+    "gulp-uglify": "^3.0.2",
+    "gulp-zip": "^5.1.0",
+    "node-sass": "^7.0.1",
+    "node-sass-tilde-importer": "^1.0.2",
+    "rollup": "^2.68.0",
+    "yargs": "^17.3.1"
+  }
 }
